add temperature unit create set_temperature functions

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -17,12 +17,12 @@
    <h1>Tableau de bord</h1>
    <h2><span id="speed">default value</span>km/h</h2>
    <div id="upper">
-      <div><span id="temperature_1">default value</span></div>
-      <div><span id="temperature_2">default value</span></div>
+      <div><span id="temperature_1">default value</span> °C</div>
+      <div><span id="temperature_2">default value</span> °C</div>
    </div>
    <div id="lower">
-      <div><span id="temperature_3">default value</span></div>
-      <div><span id="temperature_4">default value</span></div>
+      <div><span id="temperature_3">default value</span> °C</div>
+      <div><span id="temperature_4">default value</span> °C</div>
    </div>
 
 </body>
