add websocket JS file

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -28,7 +28,8 @@
 </body>
 
 <div id="use_me_to_hide_the_scripts">
-   <script src="./JS/main.js"></script>   
+   <script src="./JS/main.js"></script> 
+   <script src="./JS/websocket.js"></script> 
 </div>
 
 </html>
