add debug colors put titles and temperatures on the center of their containers

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -17,19 +17,19 @@
    <h1>Tableau de bord</h1>
    <h2><span id="speed">default value</span> km/h</h2>
    <div id="upper">
-      <div><span id="temperature_1">default value</span> °C</div>
-      <div><span id="temperature_2">default value</span> °C</div>
+      <div class="left"><span id="temperature_1">default value</span> °C</div>
+      <div class="right"><span id="temperature_2">default value</span> °C</div>
    </div>
    <div id="lower">
-      <div><span id="temperature_3">default value</span> °C</div>
-      <div><span id="temperature_4">default value</span> °C</div>
+      <div class="left"><span id="temperature_3">default value</span> °C</div>
+      <div class="right"><span id="temperature_4">default value</span> °C</div>
    </div>
 
 </body>
 
 <div id="use_me_to_hide_the_scripts">
-   <script src="./JS/main.js"></script> 
-   <script src="./JS/websocket.js"></script> 
+   <!-- <script src="./JS/main.js"></script> 
+   <script src="./JS/websocket.js"></script>  -->
 </div>
 
 </html>
