--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -17,12 +17,24 @@
    <h1>Tableau de bord</h1>
    <h2><span id="speed">default value</span> km/h</h2>
    <div id="upper">
-      <div class="left"><span id="temperature_1">default value</span> °C</div>
-      <div class="right"><span id="temperature_2">default value</span> °C</div>
+      <div class="left">
+         <div class="temperature"><span id="temperature_1">default value</span> °C</div>
+         <img src="./images/circle_square.png"/>
+      </div>
+      <div class="right">
+         <div class="temperature"><span id="temperature_1">default value</span> °C</div>
+         <img src="./images/circle_square.png"/>
+      </div>      
    </div>
    <div id="lower">
-      <div class="left"><span id="temperature_3">default value</span> °C</div>
-      <div class="right"><span id="temperature_4">default value</span> °C</div>
+      <div class="left">
+         <div class="temperature"><span id="temperature_1">default value</span> °C</div>
+         <img src="./images/circle_square.png"/>
+      </div>
+      <div class="right">
+         <div class="temperature"><span id="temperature_1">default value</span> °C</div>
+         <img src="./images/circle_square.png"/>
+      </div>      
    </div>
 
 </body>
