text horizontally in the middle

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -9,8 +9,8 @@
    <link rel='stylesheet' type='text/css' href='CSS/position.css'>
    <link rel='stylesheet' type='text/css' href='CSS/size.css'>
    <link rel='stylesheet' type='text/css' href='CSS/visibility_control.css'>
-   <link rel='stylesheet' type='text/css' href='CSS/debug.css'>
    <link rel='stylesheet' type='text/css' href='CSS/other.css'>
+   <!-- <link rel='stylesheet' type='text/css' href='CSS/debug.css'> -->
 </head>
 
 <body>   
