--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -40,8 +40,8 @@
 </body>
 
 <div id="use_me_to_hide_the_scripts">
-   <!-- <script src="./JS/main.js"></script> 
-   <script src="./JS/websocket.js"></script>  -->
+   <script src="./JS/main.js"></script>
+   <script src="./JS/websocket.js"></script>
 </div>
 
 </html>
