rename main.js into display.js add log.js

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -41,7 +41,9 @@
 
 <div id="use_me_to_hide_the_scripts">
    <script src="./JS/main.js"></script>
+   <script src="./JS/display.js"></script>
    <script src="./JS/websocket.js"></script>
+   <script src="./JS/log.js"></script>
 </div>
 
 </html>
