add file tree in README add main.js and use to decide which script to use

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -19,31 +19,34 @@
    <div id="upper">
       <div class="left">
          <div class="temperature"><span id="temperature_1">default value</span> °C</div>
-         <img src="./images/circle_square.png"/>
+         <img src="./IMAGES/circle_square.png"/>
       </div>
       <div class="right">
          <div class="temperature"><span id="temperature_2">default value</span> °C</div>
-         <img src="./images/circle_square.png"/>
+         <img src="./IMAGES/circle_square.png"/>
       </div>      
    </div>
    <div id="lower">
       <div class="left">
          <div class="temperature"><span id="temperature_3">default value</span> °C</div>
-         <img src="./images/circle_square.png"/>
+         <img src="./IMAGES/circle_square.png"/>
       </div>
       <div class="right">
          <div class="temperature"><span id="temperature_4">default value</span> °C</div>
-         <img src="./images/circle_square.png"/>
+         <img src="./IMAGES/circle_square.png"/>
       </div>      
    </div>
 
 </body>
 
 <div id="use_me_to_hide_the_scripts">
-   <script src="./JS/main.js"></script>
+
    <script src="./JS/display.js"></script>
    <script src="./JS/websocket.js"></script>
    <script src="./JS/log.js"></script>
+
+   <script src="./JS/main.js"></script>
+
 </div>
 
 </html>
