add speed update change numbers display (use toFixed) change title remove python based data sending function (we will use cron instead)

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>   
-   <h1>Tableau de bord</h1>
-   <h2><span id="speed">default value</span> km/h</h2>
+   <h2>Tableau de bord Combi</h2>
+   <h1><span id="speed">default value</span> km/h</h1>
    <div id="upper">
       <div class="left">
          <div class="temperature"><span id="temperature_1">default value</span> °C</div>
