improve the CSS, add a logo

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -17,23 +17,23 @@
    <h2>Tableau de bord Combi</h2>
    <h1><span id="speed">default value</span> km/h</h1>
    <div id="upper">
-      <div class="left">
+      <div class="dasbhoard_indicator">
          <div class="temperature"><span id="temperature_1">default value</span> °C</div>
-         <img src="./IMAGES/circle_square.png"/>
+         <img class="logo" src="./IMAGES/circle_square.png"/>
       </div>
-      <div class="right">
+      <div class="dasbhoard_indicator">
          <div class="temperature"><span id="temperature_2">default value</span> °C</div>
-         <img src="./IMAGES/circle_square.png"/>
+         <img class="logo" src="./IMAGES/circle_square.png"/>
       </div>      
    </div>
    <div id="lower">
-      <div class="left">
+      <div class="dasbhoard_indicator">
          <div class="temperature"><span id="temperature_3">default value</span> °C</div>
-         <img src="./IMAGES/circle_square.png"/>
+         <img class="logo" src="./IMAGES/circle_square.png"/>
       </div>
-      <div class="right">
+      <div class="dasbhoard_indicator">
          <div class="temperature"><span id="temperature_4">default value</span> °C</div>
-         <img src="./IMAGES/circle_square.png"/>
+         <img class="logo" src="./IMAGES/circle_square.png"/>
       </div>      
    </div>
 
