--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -18,23 +18,23 @@
    <h1><span id="speed">default value</span> km/h</h1>
    <div id="upper">
       <div class="dasbhoard_indicator">
-         <div class="temperature"><span id="temperature_1">default value</span> °C</div>
-         <img class="logo" src="./IMAGES/circle_square.png"/>
+         <img class="logo" src="./IMAGES/inside temp.png"/>
+         <div class="temperature left"><span id="temperature_1">888</span> °C</div>         
       </div>
       <div class="dasbhoard_indicator">
-         <div class="temperature"><span id="temperature_2">default value</span> °C</div>
-         <img class="logo" src="./IMAGES/circle_square.png"/>
+         <div class="temperature right"><span id="temperature_2">888</span> °C</div>
+         <img class="logo" src="./IMAGES/external temp.png"/>
       </div>      
    </div>
    <div id="lower">
       <div class="dasbhoard_indicator">
-         <div class="temperature"><span id="temperature_3">default value</span> °C</div>
-         <img class="logo" src="./IMAGES/circle_square.png"/>
+         <img class="logo" src="./IMAGES/motor temp.png"/>
+         <div class="temperature left"><span id="temperature_3">888</span> °C</div>      
       </div>
       <div class="dasbhoard_indicator">
-         <div class="temperature"><span id="temperature_4">default value</span> °C</div>
-         <img class="logo" src="./IMAGES/circle_square.png"/>
-      </div>      
+         <div class="temperature right"><span id="temperature_4">888</span> °C</div>         
+         <img class="logo" src="./IMAGES/water temp.png"/>
+      </div>
    </div>
 
 </body>
