--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -15,24 +15,24 @@
 
 <body>   
    <h2>Tableau de bord Combi</h2>
-   <h1><span id="speed">default value</span> km/h</h1>
+   <h1><span id="speed">speed</span> km/h</h1>
    <div id="upper">
       <div class="dasbhoard_indicator">
          <img class="logo" src="./IMAGES/inside temp.png"/>
-         <div class="temperature left"><span id="temperature_1">888</span> °C</div>         
+         <div class="temperature left"><span id="temperature_car">car</span> °C</div>         
       </div>
       <div class="dasbhoard_indicator">
-         <div class="temperature right"><span id="temperature_2">888</span> °C</div>
+         <div class="temperature right"><span id="">motor</span> °C</div>
          <img class="logo" src="./IMAGES/external temp.png"/>
       </div>      
    </div>
    <div id="lower">
       <div class="dasbhoard_indicator">
          <img class="logo" src="./IMAGES/motor temp.png"/>
-         <div class="temperature left"><span id="temperature_3">888</span> °C</div>      
+         <div class="temperature left"><span id="temperature_motor">water</span> °C</div>      
       </div>
       <div class="dasbhoard_indicator">
-         <div class="temperature right"><span id="temperature_4">888</span> °C</div>         
+         <div class="temperature right"><span id="temperature_water">ext</span> °C</div>         
          <img class="logo" src="./IMAGES/water temp.png"/>
       </div>
    </div>
