solve several bugs (key errors) use 11 22 33 and 44 when the sensors are not coded yet

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -22,7 +22,7 @@
          <div class="temperature left"><span id="temperature_car">888</span> °C</div>         
       </div>
       <div class="dasbhoard_indicator">
-         <div class="temperature right"><span id="">888</span> °C</div>
+         <div class="temperature right"><span id="temperature_ext">888</span> °C</div>
          <img class="logo" src="./IMAGES/external temp.png"/>
       </div>      
    </div>
