test everything on raspberry add combi.service add launch_backend.sh update README

--- a/front/tableau_de_bord.html
+++ b/front/tableau_de_bord.html
@@ -15,7 +15,7 @@
 
 <body>   
    <h2>Tableau de bord Combi</h2>
-   <h1><span id="speed">888</span> km/h</h1>
+   <h1><span id="speed">Backend Non Connecté !</span></h1>
    <div id="upper">
       <div class="dasbhoard_indicator">
          <img class="logo" src="./IMAGES/inside temp.png"/>
